# FilmBot

./: Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml
